# Distributed-MCR2

./: LICENSE  README.md  Sample_parti.py  Sample_parti_noiid5.py  args.py  client.py  environment.yml  general_utils.py  loss.py  main_colMCR_iid.py  main_colMCR_niid.py  pyproject.toml  requirements.txt  trainer_col.py
data/: CategoryToClients10.txt  CategoryToClients4.txt  LocalDist_iid_test10.txt  LocalDist_niid4.txt  LocalDist_niid5_4.txt  LocalDist_niid_test4.txt
scripts/: run_iid.sh  run_niid.sh
src/distributed_mcr2/: __init__.py  args.py  client.py  loss.py  model.py  model_mnist.py  paths.py  sample_parti.py  sample_parti_noiid.py  train_iid.py  train_niid.py  trainer_col.py
src/distributed_mcr2/data/: CategoryToClients5_4.txt  LocalDist_iid10.txt  LocalDist_niid_test5_4.txt
src/distributed_mcr2/dataset/: cifar10.py  cifar100.py  mnist.py
src/distributed_mcr2/resources/: 10_adj_matrix.txt  4_adj_matrix.txt  5_adj_matrix.txt
tests/: test_package_smoke.py
